// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Dropdown renders an empty div if the user object does not contain data 1`] = `
<div
  className="dropdown-menu dropdown-menu-right"
>
  <div
    className="dropdown-item disabled pl-0 pr-0"
  >
    <div />
  </div>
  <a
    className="dropdown-item"
    data-target="#logout-modal"
    data-toggle="modal"
    href="/"
  >
    Log out
  </a>
</div>
`;

exports[`Profile Dropdown renders to match snapshot 1`] = `
<div
  className="dropdown-menu dropdown-menu-right"
>
  <div
    className="dropdown-item disabled pl-0 pr-0"
  >
    <div
      className="profile-details"
    >
      <div
        className="profile-details__image"
      >
        <img
          alt="Test User profile-details pic"
          src="http://"
        />
      </div>
      <div
        className="profile-details__right"
      >
        <div
          className="profile-details__name"
        >
          Test User
        </div>
        <div
          className="profile-details__role"
        >
          Fellow
        </div>
      </div>
    </div>
  </div>
  <a
    className="dropdown-item"
    data-target="#logout-modal"
    data-toggle="modal"
    href="/"
  >
    Log out
  </a>
</div>
`;
